# splitz

./: .travis.yml  README.md  meson.build
data/: Application.css  css.gresource.xml
src/: Application.vala  MainWindow.vala
